test/parser/cases/valid/small/block_expression.cp
main()
{
    let value = {
        let base = 1;
        base + 2
    };
}
