test/parser/cases/invalid/small/empty_index_expression.cp
main()
{
    let data = [1, 2];
    let item = data[];
}
